--- a/css/about.css
+++ b/css/about.css
@@ -8,12 +8,14 @@
 .about-content {
     display: flex;
     position: relative;
+    width: 100%;
 }
 
 .about-content_textcontainer {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    width: 50%;
 }
 
 .about-content_title {
@@ -24,13 +26,13 @@
 .about-content_text {
     font-size: var(--text-size);
     margin: .7em 0 1em 0;
-    width: 60%;
 }
 
 .about-content_imagecontainer {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
+    width: 50%;
 }
 
 .about-content_image {
@@ -56,9 +58,16 @@
     .about-content {
         flex-direction: column;
         width: 300px;
-        height: 75%;
-        justify-content: space-between;
+        height: 100%;
+        justify-content: space-evenly;
         margin-bottom: 0;
+    }
+    .about-content_textcontainer {
+        width: 100%;
+    }
+    .about-content_imagecontainer {
+        width: 100%;
+        justify-content: center;
     }
     .about-content_text {
         font-size: var(--text-size-mobile);
@@ -69,12 +78,13 @@
     }
     .about-fig-sq {
         top: 9.5em;
+        right: -10%;
     }
     .about-fig-sq2 {
         bottom: 0em;
-        left: -3em;
+        left: -10%;
     }
     .about-fig-ci {
-        left: -3em;
+        left: -10%;
     }
 }
