--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,41 @@
 
-.contact-fig {
-    fill: red;
-    left: 50%;
+.contact-content_textcontainer {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    position: relative;
+    text-align: center;
+}
+
+.contact-content_hyperlinks {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contact-fig-sq2 {
+    right: 55%;
+    bottom: 5%;
+}
+
+.contact-fig-ci {
+    left: 55%;
+    top: 5%;
+    border-radius: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+    
+    .contact-fig-sq2 {
+        right: 0;
+        bottom: 65%;
+    }
+    
+    .contact-fig-ci {
+        left: 0;
+        top: 40%;
+    } 
+
 }
