--- a/css/projects.css
+++ b/css/projects.css
@@ -2,187 +2,201 @@
   position: relative;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center !important;
 }
 
 .projects-content {
-    height: 500px;
-    flex-direction: column;
-    display: flex;
-    position: relative;
-    overflow: hidden;
-    padding: 0 2em;
-}
-
-.projects-content_textcontainer {
-    text-align: right;
-}
-
-.projects-content_title {
-    color: var(--aqua);
-    font-weight: 600;
-    font-size: var(--title-size);
-}
-
-.projects-content_text {
-    color: var(--white);
-    margin: .7em 0 1em 0;
-    font-size: var(--text-size);
-}
-
-.swiper-button-next, .swiper-button-prev {
-    color: var(--purple);
-    position: absolute;
-    top: 88%;
-    z-index: 110;
-}
-
-.swiper-button-next {
-    right: 43%;
-}
-
-.swiper-button-prev {
-    left: 43%;
-}
-
-.swiper-pagination {
-    position: absolute;
-    top: 85.5%;
-}
-
-.swiper-pagination-bullet-active {
-    background-color: var(--purple) !important;
+  height: 600px;
+  flex-direction: column;
+  display: flex;
+  justify-content: center !important;
+  position: relative;
+  overflow: hidden;
+  padding: 2em;
 }
 
 .swiper-slide {
   color: var(--white);
-  background: var(--semi-black);
+  background: var(--black2);
   display: flex;
   flex-direction: row-reverse;
   width: 100%;
+  height: 400px;
+}
+
+.projects-content_textcontainer {
+  text-align: right;
+}
+
+.projects-content_title {
+  color: var(--aqua);
+  font-weight: 600;
+  font-size: var(--title-size);
+}
+
+.projects-content_text {
+  color: var(--white);
+  margin: 0.7em 0 1em 0;
+  font-size: var(--text-size);
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: var(--purple);
+  position: absolute;
+  top: 78.5%;
+  z-index: 110;
+}
+
+.swiper-button-next {
+  right: 43%;
+}
+
+.swiper-button-prev {
+  left: 43%;
+}
+
+.swiper-pagination {
+  position: absolute;
+  top: 76.5%;
+  z-index: 1;
+  height: min-content;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: var(--purple) !important;
 }
 
 .slider-left {
-    width: 40%;
-    position: inherit;
-    right: -20px;
+  width: 40%;
+  position: inherit;
+  right: -20px;
 }
 
 .slider-left .left-textbox {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .left-textbox .text {
-    height: 70%;
-    display: flex;
-    align-items: flex-end;
-    font-size: var(--text-size);
-    text-align: right;
+  height: 70%;
+  display: flex;
+  align-items: flex-end;
+  font-size: var(--text-size);
+  text-align: right;
 }
 
 .left-textbox .date {
-    text-align: right;
-    color: var(--purple);
-    height: 30%;
+  text-align: right;
+  color: var(--purple);
+  height: 30%;
 }
 
-
 .slider-right {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 70%;
-    height: 100%;
-    border-radius: 5px;
-    position: inherit;
-    left: -20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 70%;
+  height: 100%;
+  border-radius: 5px;
+  position: inherit;
+  left: -20px;
 }
 
 .slider-right .right-textbox {
-    height: 100%;
-    display: flex;
-    font-size: var(--text-size);
-    flex-direction: column;
-    justify-content: center;
+  height: 100%;
+  display: flex;
+  font-size: var(--text-size);
+  flex-direction: column;
+  justify-content: center;
 }
 
 .slider-right .right-textbox .subtitle {
-    color: var(--white);
+  color: var(--white);
 }
 
 .right-textbox .title {
-    color: var(--purple);
-    font-size: var(--title-size);
-    font-weight: 600;
+  color: var(--purple);
+  font-size: var(--title-size);
+  font-weight: 600;
 }
 
 .slider-right .right-image {
-    width: 400px;
-    border-radius: 5px;
+  max-width: 400px;
+  max-height: 250px;
+  border-radius: 5px;
 }
 
 .slider-right .right-links {
-    height: 100%;
-    width: 400px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  height: 100%;
+  width: 400px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .right-links .links {
-    font-size: 2em;
-    width: 20%;
-    display: flex;
-    justify-content: space-between;
+  font-size: 2em;
+  width: 20%;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .links i {
-    color: var(--aqua);
+  color: var(--aqua);
+  margin-left: 0.5em;
 }
 
 @media only screen and (max-width: 800px) {
-    .projects {
-        height: 120vh;
-    }
-    .swiper-pagination {
-        top: 90%;
-    }
-    .swiper-button-next, .swiper-button-prev {
-        color: var(--purple);
-        position: relative;
-    }
-    .projects-content {
-        height: 850px;
-        padding-bottom: 0;
-    }
-    .swiper-slide {
-        flex-direction: column-reverse;
-        padding: 1em 1em 0em 1em;
-    }
-    .slider-right {
-        width: 100%;
-        left: 0;
-    }
-    .slider-right .right-image, .slider-right .right-links {
-        width: 100%;
-    }
-    .slider-left {
-        width: 100%;
-        height: 70%;
-        left: 0;
-    }
-    .slider-left .left-textbox {
-        justify-content: center;
-    }
-    .slider-left .left-textbox .text {
-        font-size: var(--text-size-mobile);
-        text-align: center;
-    }
-    .left-textbox .date {
-        text-align: center;
-        height: 30px;
-    }
+  .projects {
+    height: auto;
+  }
+  .swiper-pagination {
+    display: none;
+  }
+  .swiper-button-next,
+  .swiper-button-prev {
+    display: none;
+  }
+  .projects-content {
+    height: auto;
+    padding-bottom: 0;
+    padding: 0;
+  }
+  .swiper-slide {
+    flex-direction: column-reverse;
+    padding: 1em 1em 0em 1em;
+    height: 750px;
+  }
+  .slider-right {
+    width: 100%;
+    left: 0;
+    height: 60%;
+  }
+  .slider-right .right-image,
+  .slider-right .right-links {
+    width: 100%;
+  }
+  .slider-left {
+    width: 100%;
+    height: 40%;
+    left: 0;
+    display: flex;
+  }
+  .slider-left .left-textbox {
+    justify-content: space-evenly;
+    align-items: center;
+    padding-bottom: 2em;
+  }
+  .slider-left .left-textbox .text {
+    font-size: var(--text-size-mobile);
+    text-align: center;
+    align-items: center;
+  }
+  .left-textbox .date {
+    text-align: center;
+    height: 30px;
+  }
 }
