--- a/css/theme.css
+++ b/css/theme.css
@@ -1,6 +1,7 @@
 :root {
-  --black: #161316;
-  --semi-black: #1b181c;
+  --black: hsl(300, 10%, 1%);
+  --black2: hsl(300, 10%, 3%);
+  --semi-black: hsl(300, 10%, 5%);
   --white: #fffffc;
   --purple: #6320ee;
   --aqua: #61f8b6;
@@ -14,7 +15,7 @@ body {
   color: #fffffc;
   padding: 0;
   margin: 0;
-  background-color: #161316;
+  background-color:var(--black);
 }
 
 .preload {
@@ -43,21 +44,35 @@ section {
   background-color: var(--semi-black);
   cursor: pointer;
   width: 175px;
-  z-index: 9;
   text-align: center;
 }
 
-.cta-button span {
-  position: relative;
-  display: inline-block;
-  top: 0;
-  left: 0;
-  width: 100%;
-  transition: 0.3s;
+.cta-button:hover {
+  border: var(--aqua) solid 3px;
+  color: var(--semi-black);
+  background-color: var(--aqua);
+  transition: .25s;
+}
+
+.hyperlink {
+  font-size: var(--text-size);
+  color: var(--aqua);
+}
+
+.hyperlink:hover {
+  text-decoration: underline;
 }
 
 .max-width {
   max-width: 1800px;
+}
+
+.link {
+  color: var(--aqua);
+}
+
+.link:hover {
+  text-decoration: underline;
 }
 
 .horizontal_flip {
