--- a/css/footer.css
+++ b/css/footer.css
@@ -5,6 +5,7 @@
     align-items: center;
     height: auto;
     background-color: var(--black2);
+    padding: 2rem 0;
 }
 
 .footer-content {
@@ -19,6 +20,7 @@
 
 .footer-content h1 {
     font-size: 2.5em;
+    color: var(--white);
 }
 
 .footer-content i {
@@ -27,6 +29,10 @@
 }
 
 @media only screen and (max-width: 600px) {
+
+    .footer {
+        padding: 0;
+    }
 
     .footer-content h1 {
         font-size: 1.5em;
