--- a/css/projects.css
+++ b/css/projects.css
@@ -59,8 +59,13 @@
 .swiper-pagination {
   position: absolute;
   top: 76.5%;
-  z-index: 1;
+  z-index: 1 !important;
+  width: 25% !important;
   height: min-content;
+  left: 0; 
+  right: 0; 
+  margin-left: auto; 
+  margin-right: auto; 
 }
 
 .swiper-pagination-bullet-active {
